# Reproducible-Research-uni-project

./: .dockerignore  Dockerfile  README.md  challenger_model_lgbm.ipynb  docker-compose.yml  pyproject.toml  report.ipynb
data/: hyperopt_results.csv
models/: DecisionTreeClassifier_model_iv_cv.pkl  DecisionTreeClassifier_model_xgb_cv.pkl  ExtraTreesClassifier_model_iv_cv.pkl  ExtraTreesClassifier_model_xgb_cv.pkl  GradientBoostingClassifier_model_iv_cv.pkl  GradientBoostingClassifier_model_xgb_cv.pkl  LGBMClassifier_model_iv_cv.pkl  LGBMClassifier_model_xgb_cv.pkl  LogisticRegression_model_iv_cv.pkl  LogisticRegression_model_xgb_cv.pkl  RandomForestClassifier_model_iv_cv.pkl  RandomForestClassifier_model_xgb_cv.pkl  XGBClassifier_model_iv_cv.pkl  XGBClassifier_model_xgb_cv.pkl  decision_tree_model.pkl  decision_tree_model_xgb.pkl  gradient_boosting_model.pkl  gradient_boosting_model_xgb.pkl  logistic_regression_model.pkl  logistic_regression_model_xgb.pkl  xgboost_model.pkl  xgboost_model_xgb.pkl
notebooks/: data_download.ipynb
rr_project/: data_wrangling.py  feature_selection_xgb.py  metric.py  split_data.py  train_models.py  visualization.py
rr_project/config/: const.py
src/: data_wrangling.py  feature_selection_xgb.py
