[tool.poetry]
name = "rr-project"
version = "0.1.0"
description = ""
authors = ["Jakub Wujec <kuba1302@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xgboost = "^2.0.3"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
scipy = "^1.13.0"
pytest = "^8.2.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
